--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="jscript.js"defer ></script>
+    <script type="text/javascript" src="javascript.js"defer ></script>
     <title>Document</title>
 </head>
 <body>
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
-    <button id="scissor">Scissor</button>
+    <button id="s">Scissor</button>
+    
+
+
+    
 </body>
 </html>
+
+
