--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="javascript.js"defer ></script>
+    <script type="text/javascript" src="javascript.js" defer ></script>
     <title>Document</title>
 </head>
 <body>
@@ -12,10 +12,8 @@
     <button id="paper">Paper</button>
     <button id="s">Scissor</button>
     
+    <div id="container"></div>
 
 
-    
 </body>
 </html>
-
-
