added image links

--- a/Index.html
+++ b/Index.html
@@ -4,16 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="javascript.js" defer ></script>
+    <script type="text/javascript" src="jscript.js" defer ></script>
     <title>Document</title>
 </head>
 <body>
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="s">Scissor</button>
-    
-    <div id="container"></div>
+        <div id="marksDisplay">
+            <div id="left">
+                <div id="playerMarksDisplay">Player Marks</div>
+                <div id="playerMarksCounter">0</div>
+            </div>
+            <div id="right">
+               <div id="computerMarksDisplay">Computer Marks</div>
+               <div id="computerMarksCounter">0</div>
+            <div>
+        </div>
 
+        <diV id="images">
+            <div>
+                <div id="leftImg">
+                    <img src="./assets/paper.png">
+                </div>
+                <div id="leftImg">
+                    <img src="./assets/paper.png">
+                </div>
+            </div>
+        </diV>
 
+        <div>
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="s">Scissor</button>
+        </div>
 </body>
 </html>
