added css file and links

--- a/Index.html
+++ b/Index.html
@@ -5,26 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="jscript.js" defer ></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
-        <div id="marksDisplay">
-            <div id="left">
-                <div id="playerMarksDisplay">Player Marks</div>
-                <div id="playerMarksCounter">0</div>
+        <div class="marksDisplay">
+            <div class="left">
+                <div class="playerMarksDisplay">Player Marks</div>
+                <div class="playerMarksCounter">0</div>
             </div>
-            <div id="right">
-               <div id="computerMarksDisplay">Computer Marks</div>
-               <div id="computerMarksCounter">0</div>
+            <div class="right">
+               <div class="computerMarksDisplay">Computer Marks</div>
+               <div class="computerMarksCounter">0</div>
             <div>
         </div>
 
-        <diV id="images">
+        <diV class="images">
             <div>
-                <div id="leftImg">
+                <div class="leftImg">
                     <img src="./assets/paper.png">
                 </div>
-                <div id="leftImg">
+                <div class="leftImg">
                     <img src="./assets/paper.png">
                 </div>
             </div>
