--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Rock Paper Scissors</title>
 </head>
-<body>
+<body class="body">
         <div class="marksDisplay">
             <div class="left">
                 <div class="playerMarksDisplay">Player Marks</div>
@@ -17,21 +17,19 @@
             <div class="right">
                <div class="computerMarksDisplay">Computer Marks</div>
                <div class="computerMarksCounter">0</div>
-            <div>
+            </div>
         </div>
 
-        <diV class="images">
-            <div>
+        <div class="images">
                 <div class="leftImg">
-                    <img src="./assets/paper.png">
+                    <img src="./assets/paper.png" class="leftImgS">
                 </div>
-                <div class="leftImg">
-                    <img src="./assets/paper.png">
+                <div class="rightImg">
+                    <img src="./assets/rock.png" class="rightImgS">
                 </div>
-            </div>
-        </diV>
+        </div>
 
-        <div>
+        <div class="buttons">
             <button id="rock">Rock</button>
             <button id="paper">Paper</button>
             <button id="s">Scissor</button>
