--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,11 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body class="body">
+
+        <div class="intro">
+            <h1>ROCK, PAPAER & SCISSORS</h1>
+        </div>
+        <div class="line"></div>
         <div class="marksDisplay">
             <div class="left">
                 <div class="playerMarksDisplay">Player Marks</div>
@@ -30,9 +35,21 @@
         </div>
 
         <div class="buttons">
-            <button id="rock">Rock</button>
-            <button id="paper">Paper</button>
-            <button id="s">Scissor</button>
+            <button id="rock" class="buttonCss">Rock</button>
+            <div class="divider"></div>
+            <button id="paper" class="buttonCss">Paper</button>
+            <div class="divider"></div>
+            <button id="s" class="buttonCss">Scissor</button>
+        </div>
+
+        <div class="footer">
+            <div class="footerFlex">
+                 <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Githmin Jayawardhana | theOdinProject.com</p>
+                 <div class="divider"></div>
+                 <div class="footerIcon">
+                     <a href="https://github.com/githmin"> <img src="./assets/GitHub-Mark-Light-32px.png" class="githubLogo"> </a>
+                 </div> 
+            </div>
         </div>
 </body>
 </html>
