--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <body class="body">
 
         <div class="intro">
-            <h1>ROCK, PAPAER & SCISSORS</h1>
+            <h1>ROCK, PAPER & SCISSORS</h1>
         </div>
         <div class="line"></div>
         <div class="marksDisplay">
