--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
         <div class="footer">
             <div class="footerFlex">
-                 <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Githmin Jayawardhana | theOdinProject.com</p>
+                 <p> Githmin Jayawardhana &copy; <script>document.write(new Date().getFullYear())</script> | theOdinProject.com</p>
                  <div class="divider"></div>
                  <div class="footerIcon">
                      <a href="https://github.com/githmin"> <img src="./assets/GitHub-Mark-Light-32px.png" class="githubLogo"> </a>
